View Issue Details

IDProjectCategoryView StatusLast Update
0029196Open CASCADEOCCT:Testspublic2018-06-29 21:19
ReporterabvAssigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Target Version7.3.0Fixed in Version7.3.0 
Summary0029196: Tests - some test cases fail with Intel HD graphics
DescriptionWhen I run tests on my workstation where only integrated graphic card is available (CPU Intel i7-4790 with Intel HD4600 graphics), some tests report failures which are not seen on other workstations. Most of fails seem to be due to slightly different size of PDF files generated from view dump, i.e. apparently due to subtle differences in rendering with Intel graphics.
Steps To ReproduceRun tests on workstation with integrated Intel graphics
TagsNo tags attached.
Test case numberNot required

Activities

git

2017-10-09 13:19

administrator   ~0071303

Branch CR29196 has been created by abv.

SHA-1: ac554011804518ada7e9b0bf8cd527964bf491c6


Detailed log of new commits:

Author: abv
Date: Mon Oct 9 13:19:20 2017 +0300

    0029196: Tests - some test cases fail with Intel HD graphics
    
    Two additional non-alphabetic-order combinations of complex types are handled in RWStepAP214_ReadWriteModule.cxx

git

2017-10-11 11:59

administrator   ~0071336

Branch CR29196 has been updated by kgv.

SHA-1: 862711acf0f6a6be75553a3de9c456048df41f50


Detailed log of new commits:

Author: kgv
Date: Wed Oct 11 11:59:07 2017 +0300

    Improved robustness of test case bugs/vis/bug26357.

git

2017-10-11 22:30

administrator   ~0071359

Branch CR29196 has been updated forcibly by abv.

SHA-1: 40652d829e53e9e50dcddeecca671b28f2dd46b4

abv

2017-10-12 06:07

manager   ~0071360

Fix is pushed to CR29196, please review. Tests have passed, see Jenkins job CR29196-master-abv; changes of images in test bugs vis bug26357 are intentional.

kgv

2017-10-12 10:28

developer   ~0071361

Please test the patch.

bugmaster

2017-10-12 12:13

administrator   ~0071364

Please confirm changes in images:

IMAGE bugs vis bug26357: bug26357_1.png differs
IMAGE bugs vis bug26357: bug26357_2.png differs
IMAGE bugs vis bug26357: bug26357_3.png differs

http://occt-tests/CR29196-master-abv-OCCT/Debian70-64/diff-Debian70-64-image.html
http://occt-tests/CR29196-master-abv-OCCT/Windows-64-VC10/diff-Windows-64-VC10-image.html

kgv

2017-10-12 12:17

developer   ~0071365

Image difference within test case bugs/vis/bug26357 are caused by intentional changes.

bugmaster

2017-10-12 12:27

administrator   ~0071366

Combination -
OCCT branch : CR29196 SHA-1: 40652d829e53e9e50dcddeecca671b28f2dd46b4
Products branch : master
was compiled on Linux, MacOS and Windows platforms and tested on optimize mode.


Number of compiler warnings:
No new/fixed warnings

Regressions/Differences/Improvements:
No regressions/differences

CPU differences:
No differences that require special attention

Image differences :
Differences in images have been agreed with developer

Memory differences :
No differences that require special attention

git

2017-10-14 12:20

administrator   ~0071481

Branch CR29196 has been deleted by kgv.

SHA-1: 40652d829e53e9e50dcddeecca671b28f2dd46b4

Related Changesets

occt: master 7f83633f

2017-10-09 10:19:20

abv


Committer: bugmaster Details Diff
0029196: Tests - some test cases fail with Intel HD graphics

Test bugs vis bug26357 is revised to check colors in more robust way.
In tests bugs vis bug29091_*, size of produced file is checked to be within range of known valid sizes, rather than hard-coded (per-platform) exact sizes.
FPE signals are disabled for test bugs vis bug29127 to prevent exceptions cause by software OpenGl driver.

File data/occ/Box.brep is removed to avoid confusion with file box.brep in public data files used in tests.

Two additional non-alphabetic-order combinations of complex types are handled in RWStepAP214_ReadWriteModule.cxx
Affected Issues
0029196
rm - data/occ/Box.brep Diff File
mod - src/RWStepAP214/RWStepAP214_ReadWriteModule.cxx Diff File
mod - tests/bugs/vis/bug21091_3 Diff File
mod - tests/bugs/vis/bug21091_4 Diff File
mod - tests/bugs/vis/bug21091_5 Diff File
mod - tests/bugs/vis/bug21091_6 Diff File
mod - tests/bugs/vis/bug21091_7 Diff File
mod - tests/bugs/vis/bug21091_8 Diff File
mod - tests/bugs/vis/bug21091_9 Diff File
mod - tests/bugs/vis/bug23407_2 Diff File
mod - tests/bugs/vis/bug26357 Diff File
mod - tests/bugs/vis/bug29127 Diff File

Issue History

Date Modified Username Field Change
2017-10-09 13:16 abv New Issue
2017-10-09 13:16 abv Assigned To => apn
2017-10-09 13:17 abv Assigned To apn => abv
2017-10-09 13:17 abv Status new => assigned
2017-10-09 13:19 git Note Added: 0071303
2017-10-11 11:59 git Note Added: 0071336
2017-10-11 22:30 git Note Added: 0071359
2017-10-12 06:07 abv Note Added: 0071360
2017-10-12 06:07 abv Assigned To abv => kgv
2017-10-12 06:07 abv Status assigned => resolved
2017-10-12 06:07 abv Steps to Reproduce Updated
2017-10-12 10:28 kgv Note Added: 0071361
2017-10-12 10:28 kgv Assigned To kgv => bugmaster
2017-10-12 10:28 kgv Status resolved => reviewed
2017-10-12 12:13 bugmaster Note Added: 0071364
2017-10-12 12:13 bugmaster Assigned To bugmaster => abv
2017-10-12 12:13 bugmaster Status reviewed => feedback
2017-10-12 12:17 kgv Note Added: 0071365
2017-10-12 12:27 bugmaster Note Added: 0071366
2017-10-12 12:27 bugmaster Status feedback => tested
2017-10-12 19:00 bugmaster Changeset attached => occt master 7f83633f
2017-10-12 19:00 bugmaster Assigned To abv => bugmaster
2017-10-12 19:00 bugmaster Status tested => verified
2017-10-12 19:00 bugmaster Resolution open => fixed
2017-10-14 12:20 git Note Added: 0071481
2017-12-12 10:38 bugmaster Test case number => Not required
2018-06-29 21:15 aiv Fixed in Version => 7.3.0
2018-06-29 21:19 aiv Status verified => closed