src/RWStepAP214/RWStepAP214_ReadWriteModule.cxx
@@ -3401,6 +3401,15 @@ Standard_Integer RWStepAP214_ReadWriteModule::CaseStep
                (types(7).IsEqual(StepType(271)))) {
         return 323;
       }
+      else if ((types(1).IsEqual(StepType(40))) &&
+               (types(2).IsEqual(StepType(41))) &&
+               (types(3).IsEqual(StepType(240))) &&
+               (types(4).IsEqual(StepType(49))) &&
+               (types(5).IsEqual(StepType(247))) &&
+               (types(6).IsEqual(StepType(144))) &&
+               (types(7).IsEqual(StepType(271)))) {
+        return 323;
+      }
     }
     // Added by FMA
     else if (NbComp == 6) {
@@ -3629,6 +3638,11 @@ Standard_Integer RWStepAP214_ReadWriteModule::CaseStep
                (types(2).IsEqual(StepType(264))) &&
                (types(3).IsEqual(StepType(336)))) {
         return 335;
+      }
+      else if ((types(1).IsEqual(StepType(169))) &&
+               (types(2).IsEqual(StepType(336))) &&
+               (types(3).IsEqual(StepType(264)))) {
+	    return 335;
       }
       else if ((types(1).IsEqual(StepType(143))) &&
                (types(2).IsEqual(StepType(188))) &&
